testdata/baselines/reference/contentMappers/contentMapperGeneratedCode.txt
=== Content-mapped files ===

//// [Component.vue] (ScriptKind: ScriptKindTS, ContentMapper: [.vue])
--- Original ---
<template>
  <Widget />
</template>

--- Transformed ---
export const el = jsxRuntime(Widget);

=== Diagnostics ===

Component.vue:1:19 - error TS2304: Cannot find name 'jsxRuntime'.
  This location is in code generated by the content mapper 'vue-mapper@1.0.0' and has no corresponding location in the original file.

1 export const el = jsxRuntime(Widget);
                    ~~~~~~~~~~

Component.vue:1:30 - error TS2304: Cannot find name 'Widget'.
  This location is in code generated by the content mapper 'vue-mapper@1.0.0' and has no corresponding location in the original file.

1 export const el = jsxRuntime(Widget);
                               ~~~~~~

